--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Latian</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Belajar git</h1>
